--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@prisma/client": "6.11.0",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.10.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.11.0",
+    "prisma-extension-soft-delete": "^2.0.1",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "ts-node-dev": "^2.0.0",
